svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nginx
    security.istio.io/tlsMode: istio
#    service.istio.io/canonical-name: nginx
#    service.istio.io/canonical-revision: v1
    version: v1
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
#    security.istio.io/tlsMode: istio
#    service.istio.io/canonical-name: nginx-v1
#    service.istio.io/canonical-revision: v1
status:
  loadBalancer: {}
